[package]
name = "blog-base-actix-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
